force-app/main/default/objects/Apttus_Config2__OrderProductAttributeValue__c/Apttus_Config2__OrderProductAttributeValue__c.object-meta.xml
<CustomObject>
    <description>Represents the attribute values for a product class in a order line item</description>
    <label>Order Product Attribute Value</label>
    <nameField>
        <displayFormat>OA-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Product Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>