force-app/main/default/objects/Apttus_Config2__OrderProductAttributeValue__c/fields/Apttus_Config2__Color__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Color__c</fullName>
    <description>The product color</description>
    <inlineHelpText>The product color</inlineHelpText>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>